--- a/swaggerxpress/package.json
+++ b/swaggerxpress/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "A sample API for Schemas as an example to demonstrate features in the swagger-2.0 specification",
   "main": "index.js",
-  "scripts" : {
-    "start" : "node index.js",
-    "dev" : "nodemon index.js"
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "swagger"
@@ -14,8 +14,12 @@
   "private": true,
   "dependencies": {
     "async": "^2.0.0-rc.3",
+    "body-parser": "^1.17.2",
     "connect": "^3.2.0",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^1.3.0",
     "debug": "^2.2.0",
+    "eslint": "^4.4.1",
     "express": "^4.13.4",
     "http-status": "^0.2.2",
     "http-status-codes": "^1.0.6",
@@ -23,7 +27,9 @@
     "json-refs": "^2.1.5",
     "lodash": "^4.11.1",
     "ls": "^0.1.0",
+    "method-override": "^2.3.9",
     "mongoose": "^4.4.13",
+    "serve-favicon": "^2.4.3",
     "swagger-tools": "0.9.*",
     "wagner-core": "^0.2.0",
     "yaml-js": "^0.1.3"
