Added yaml reader to json definition that will be used by swagger

--- a/full-stack/.env
+++ b/full-stack/.env
@@ -1,5 +1,7 @@
+IP=localhost
+PORT=3000
+API_DEFINITION=/apiYaml/index.yaml
 APP_NAME=myApp
-PORT=8080
 DATABASE_TYPE=mongodb
 DATABASE_URI=mongodb://localhost:27017/test
 #VIEW_ENGINE=pug
