--- a/full-stack/package.json
+++ b/full-stack/package.json
@@ -10,7 +10,8 @@
     "serve": "ng serve -pc proxy.conf.json --open",
     "build": "ng build",
     "cleanbe": "rimraf dist",
-    "buildbe": "tsc -p server && echo done!\n",
+    "yaml": "gulp copyYAML",
+    "buildbe": "npm run cleanbe && npm run yaml && echo compiling... && tsc -p server && echo done!\n",
     "watchbe": "concurrently \"tsc -w -p server\" \"nodemon dist/server/index.js\"",
     "start": "node dist/server/index.js",
     "predev": "tsc -p server",
@@ -44,18 +45,21 @@
     "express": "^4.15.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "js-yaml": "^3.9.1",
+    "json-refs": "^3.0.0",
     "jsonwebtoken": "^7.4.1",
     "method-override": "^2.3.9",
     "mongoose": "^4.10.4",
     "morgan": "^1.8.2",
     "primeng": "^4.1.2",
     "rxjs": "^5.4.1",
+    "swagger-tools": "^0.10.1",
     "tether": "1.4.0",
     "typescript-logging": "^0.4.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.6",
+    "@angular/cli": "^1.2.6",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
     "@types/express": "^4.0.36",
@@ -66,6 +70,7 @@
     "@types/node": "^6.0.85",
     "codelyzer": "~3.0.1",
     "concurrently": "^3.3.0",
+    "gulp": "^3.9.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
